# reaper

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: deploy.yml  test.yml
.kamal/: secrets.example
config/: deploy.yml
src/reaper/: __init__.py  config.py
src/reaper/bot/: main.py
src/reaper/bot/cogs/: spam_defense.py
src/reaper/bot/services/: burst_detector.py  image_hash_matcher.py  roast_generator.py
src/reaper/db/: models.py  session.py
src/reaper/db/migrations/: env.py
src/reaper/db/migrations/versions/: 1a81b6c73aff_use_timestamptz_for_datetime_columns.py  24f0a459bdfe_initial_schema.py
src/reaper/db/repositories/: base.py  burst_windows.py  guilds.py  mod_actions.py  scam_image_hashes.py
src/reaper/web/: auth.py  main.py  templating.py
src/reaper/web/routes/: dashboard.py  guild_settings.py  incidents.py
src/reaper/web/static/css/: style.css
src/reaper/web/templates/: base.html  dashboard.html  guild_dashboard.html  guild_settings.html  incidents.html  landing.html
src/reaper/web/templates/partials/: incident_row.html
tests/: conftest.py
tests/bot/cogs/: test_spam_defense_history_eulogy.py  test_spam_defense_roast.py
tests/bot/services/: test_burst_detector.py  test_image_hash_matcher.py
tests/db/: test_burst_windows_repo.py  test_guilds_repo.py  test_mod_actions_repo.py  test_scam_image_hashes_repo.py
